Update JOGL to 2.4.0 [2839]
From the looks of things 2.4.0 is close to release, so I simply called
our updated JOGL JAR "2.4.0rc1". I'll update it as things change.